--- a/webapp/webapp/templates/login.html
+++ b/webapp/webapp/templates/login.html
@@ -3,7 +3,8 @@
         <title>{{ title }}</title>
     </head>
     <body>
-    <h1>Sign In</h1>
+<div class="container">h1>Sign In</h1></div>
+<div class="container">
     <form action="" method="post">
         {{ form.hidden_tag() }}
         <p>
@@ -17,5 +18,6 @@
         <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
         <p>{{ form.submit() }}</p>
     </form>
+</div>
 </body>
 </html>
