--- a/webapp/webapp/templates/index.html
+++ b/webapp/webapp/templates/index.html
@@ -1,8 +1,24 @@
 {% extends "base.html" %}
 {% block content %}
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Indoor Signal Measurement</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="/home">Home</a></li>
+      <li><a href="/remoteapp">Remote App</a></li>
+      <li><a href="#">Page 3</a></li>
+    </ul>
+  </div>
+</nav>
+
+
         <div class="container"><h1>Hello!</h1></div>
 
         <div class="container"><p><b>Data</b></p></div>
+
+
         <div class="container">
               <form action="" method="post">
         {{ form_start_day.dt(class='DatePicker_start_day') }}
@@ -13,26 +29,51 @@
           </form>
   		</div>
 
+
+    {% for id in ids %}
+        <div class="container" id="{{id}}" style="float: left;>
+    {% endfor %}
+
+
+        <!-- D3.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <!-- Plotly.js -->
+    <script src="https://d14fo0winaifog.cloudfront.net/plotly-basic.js"></script>
+
+    <script type="text/javascript">
+        var graphs = {{graphJSON | safe}};
+        var ids = {{ids | safe}};
+        for(var i in graphs) {
+            Plotly.plot(ids[i], // the ID of the div, created above
+                        graphs[i].data,
+                        graphs[i].layout || {});
+        }
+    </script>
+  </div>
+
+
+
 <div class="container">
         <table class="table table-striped">
            <tr>
-       			{% for key in data_rows[0] %}
-       			<th>{{ key }}</th>
-       			{% endfor %}
-   		</tr>
-   		{% for data_row in data_rows %}
-   		<tr>
-   			<td>{{ data_row.cell_id }}</td>
-   			<td>{{ data_row.datetime|datetimeformat}}</td>
-   			<td>{{ data_row.latitude }}</td>
-   			<td>{{ data_row.longitude }}</td>
-   			<td>{{ data_row.rat }}</td>
-   			<td>{{ data_row.signal_quality }}</td>
-   			<td>{{ data_row.signal_strength }}</td>
-   		</tr>
-   		{% endfor %}
-		</table>
+            {% for key in data_rows[0] %}
+            <th>{{ key }}</th>
+            {% endfor %}
+      </tr>
+      {% for data_row in data_rows %}
+      <tr>
+        <td>{{ data_row.cell_id }}</td>
+        <td>{{ data_row.datetime|datetimeformat}}</td>
+        <td>{{ data_row.latitude }}</td>
+        <td>{{ data_row.longitude }}</td>
+        <td>{{ data_row.rat }}</td>
+        <td>{{ data_row.signal_quality }}</td>
+        <td>{{ data_row.signal_strength }}</td>
+      </tr>
+      {% endfor %}
+    </table>
 </div>
-
 
 {% endblock %}
