--- a/webapp/webapp/templates/login.html
+++ b/webapp/webapp/templates/login.html
@@ -1,22 +1,41 @@
     <html>
     <head>
         <title>{{ title }}</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <style type="text/css">
+            body { background: #fdfdfd !important; }
+        </style>
     </head>
     <body>
-<div class="container">h1>Sign In</h1></div>
+
+        <nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Indoor Signal Measurement</a>
+    </div>
+    <ul class="nav navbar-nav">
+    </ul>
+  </div>
+</nav>
+<div class="container"><h1>Log in</h1></div>
 <div class="container">
     <form action="" method="post">
+
         {{ form.hidden_tag() }}
-        <p>
-            {{ form.username.label }}<br>
+        <div class="form-group">
+            {{ form.username.label }}
+            <br>
             {{ form.username(size=32) }}
-        </p>
-        <p>
-            {{ form.password.label }}<br>
+        </div>
+        <div class="form-group">
+            {{ form.password.label }}
+            <br>
             {{ form.password(size=32) }}
-        </p>
-        <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
-        <p>{{ form.submit() }}</p>
+        </div>
+
+        <div class="form-group">{{ form.remember_me() }} {{ form.remember_me.label }}</div>
+        <div class="form-group">{{ form.submit() }}</div>
+    </div>
     </form>
 </div>
 </body>
