--- a/webapp/webapp/templates/base.html
+++ b/webapp/webapp/templates/base.html
@@ -2,7 +2,9 @@
     <head>
 
       <title>{{ title }}</title>
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     </head>
     <body>
 
@@ -10,3 +12,4 @@
         {% endblock %}
     </body>
 </html>
+
