--- a/webapp/webapp/templates/index.html
+++ b/webapp/webapp/templates/index.html
@@ -8,13 +8,22 @@
     <ul class="nav navbar-nav">
       <li class="active"><a href="/home">Home</a></li>
       <li><a href="/remoteapp">Remote App</a></li>
-      <li><a href="#">Page 3</a></li>
+      <li><a href="/logout">Logout</a></li>
     </ul>
+
+    <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        <span class="glyphicon glyphicon-user"></span> 
+                        <strong>{{ current_user.username }}</strong>
+                        
+                    </a>
+            </ul>
   </div>
 </nav>
 
 
-        <div class="container"><h1>Hello!</h1></div>
+        <div class="container"><h1>Hello {{ current_user.username }}</h1></div>
 
         <div class="container"><p><b>Data</b></p></div>
 
