--- a/webapp/webapp/templates/login.html
+++ b/webapp/webapp/templates/login.html
@@ -1,22 +1,7 @@
-    <html>
-    <head>
-        <title>{{ title }}</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <style type="text/css">
-            body { background: #fdfdfd !important; }
-        </style>
-    </head>
-    <body>
+{% extends "login_register_base.html" %}
+{% block content %}
 
-        <nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">Indoor Signal Measurement</a>
-    </div>
-    <ul class="nav navbar-nav">
-    </ul>
-  </div>
-</nav>
+
 <div class="container"><h1>Log in</h1></div>
 <div class="container">
     <form action="" method="post">
@@ -37,6 +22,9 @@
         <div class="form-group">{{ form.submit() }}</div>
     </div>
     </form>
+
+    <div class="container"><p>New User? <a href="/register">Click to Register!</a></p></div>
 </div>
-</body>
-</html>
+
+{% endblock %}
+
