--- a/webapp/webapp/templates/index_empty.html
+++ b/webapp/webapp/templates/index_empty.html
@@ -9,6 +9,7 @@
     <ul class="nav navbar-nav">
       <li class="active"><a href="/home">Home</a></li>
       <li ><a href="/remoteapp">Remote App</a></li>
+      <li><a href="/map">Map</a></li>
           </ul>
 <ul class="nav navbar-nav navbar-right">
   <li><a href="/logout">Logout</a></li>
