--- a/webapp/webapp/templates/login.html
+++ b/webapp/webapp/templates/login.html
@@ -1,30 +1,34 @@
 {% extends "login_register_base.html" %}
 {% block content %}
 
-
 <div class="container"><h1>Log in</h1></div>
+
+
 <div class="container">
     <form action="" method="post">
 
         {{ form.hidden_tag() }}
-        <div class="form-group">
-            {{ form.username.label }}
-            <br>
-            {{ form.username(size=32) }}
-        </div>
-        <div class="form-group">
-            {{ form.password.label }}
-            <br>
-            {{ form.password(size=32) }}
-        </div>
 
-        <div class="form-group">{{ form.remember_me() }} {{ form.remember_me.label }}</div>
-        <div class="form-group">{{ form.submit() }}</div>
-    </div>
+        <div class="col-xs-4">
+            {{ render_field(form.username, class='form-control', placeholder='username') }}
+
+            {{ render_field(form.password, class='form-control', placeholder='password') }}
+
+            {{ form.remember_me() }} 
+                        
+            {{ form.remember_me.label }}
+            <br>
+            <button class="btn btn-primary" type="submit">Login</button>
+
+            <br> 
+            <br>
+            <br>
+            <br>
+            <div class="container">New user ? <a href="/register">Register</a></div>
+        </div>
+        
     </form>
-
-    <div class="container"><p>New User? <a href="/register">Click to Register!</a></p></div>
-</div>
+    </div>
 
 {% endblock %}
 
