--- a/webapp/webapp/templates/login_register_base.html
+++ b/webapp/webapp/templates/login_register_base.html
@@ -1,6 +1,6 @@
     <html>
     <head>
-        <title>{{ title }}</title>
+        <title>ISM - {{ title }}</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <style type="text/css">
             body { background: #fdfdfd !important; }
@@ -17,7 +17,18 @@
     </ul>
   </div>
 </nav>
-
+        {% macro render_field(field) %}
+  <dt>{{ field.label }}
+  <dd>{{ field(**kwargs)|safe }}
+  {% if field.errors %}
+    <ul class=errors>
+    {% for error in field.errors %}
+      <li>{{ error }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+  </dd>
+{% endmacro %}
 
         {% block content %}
         {% endblock %}
