--- a/webapp/webapp/templates/remoteapp.html
+++ b/webapp/webapp/templates/remoteapp.html
@@ -8,6 +8,7 @@
     <ul class="nav navbar-nav">
       <li ><a href="/home">Home</a></li>
       <li class="active"><a href="/remoteapp">Remote App</a></li>
+      <li><a href="/map">Map</a></li>
       
     </ul>
 <ul class="nav navbar-nav navbar-right">
