filter out 0,0 coordinates from api response

--- a/webapp/webapp/templates/mapview.html
+++ b/webapp/webapp/templates/mapview.html
@@ -63,7 +63,8 @@
         location.0, location.1,
         markers=markers,
         style=style,
-        zoom = 9
+        zoom = 9,
+        fit_markers_to_bounds = True
         )
     }}
 
