--- a/webapp/webapp/templates/mapview.html
+++ b/webapp/webapp/templates/mapview.html
@@ -9,6 +9,7 @@
       <li><a href="/home">Home</a></li>
       <li><a href="/remoteapp">Remote App</a></li>
       <li class="active"><a href="/map">Map</a></li>
+      <li><a href="/help">Help</a></li>
     </ul>
 
     <ul class="nav navbar-nav navbar-right">
