--- a/webapp/webapp/templates/index_empty.html
+++ b/webapp/webapp/templates/index_empty.html
@@ -10,6 +10,7 @@
       <li class="active"><a href="/home">Home</a></li>
       <li ><a href="/remoteapp">Remote App</a></li>
       <li><a href="/map">Map</a></li>
+      <li><a href="/help">Help</a></li>
           </ul>
 <ul class="nav navbar-nav navbar-right">
   <li><a href="/logout">Logout</a></li>
@@ -33,7 +34,7 @@
                   {{ form_start_day.dt(class='DatePicker_start_day') }}
                   {{ form_start_day.dt2(class='DatePicker_start_day') }}
                   {{ form_start_day.hidden_tag() }}
-                  <button type="submit" class="btn btn-default">Submit</button>
+                  <button type="submit" class="btn btn-primary">Submit</button>
                 </div>
           </div>
         </form>
