--- a/webapp/webapp/templates/login_register_base.html
+++ b/webapp/webapp/templates/login_register_base.html
@@ -2,6 +2,7 @@
     <head>
         <title>ISM - {{ title }}</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style type="text/css">
             body { background: #fdfdfd !important; }
         </style>
