api => added filter for technology 2g,3g,4g

--- a/webapp/webapp/templates/index.html
+++ b/webapp/webapp/templates/index.html
@@ -32,6 +32,7 @@
               <form action="" method="post">
                   {{ form_start_day.dt(class='DatePicker_start_day') }}
                   {{ form_start_day.dt2(class='DatePicker_start_day') }}
+                  {{ form_ratselect.ratselect }}
                   {{ form_start_day.hidden_tag() }}
                   <button type="submit" class="btn btn-primary">Submit</button>
           </form>
