--- a/webapp/webapp/templates/index_empty.html
+++ b/webapp/webapp/templates/index_empty.html
@@ -33,6 +33,7 @@
                 <div class="form-group">
                   {{ form_start_day.dt(class='DatePicker_start_day') }}
                   {{ form_start_day.dt2(class='DatePicker_start_day') }}
+                  {{ form_ratselect.ratselect }}
                   {{ form_start_day.hidden_tag() }}
                   <button type="submit" class="btn btn-primary">Submit</button>
                 </div>
