--- a/webapp/webapp/templates/mapview.html
+++ b/webapp/webapp/templates/mapview.html
@@ -3,6 +3,8 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
+            <a href="#" class="pull-left"><img src="/favicon.png" width=40px heigth=40px></a>
+      <a class="navbar-brand" href="#">  </a>
       <a class="navbar-brand" href="#">Indoor Signal Measurement</a>
     </div>
     <ul class="nav navbar-nav">
