--- a/webapp/webapp/templates/help.html
+++ b/webapp/webapp/templates/help.html
@@ -3,9 +3,12 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
+            <a href="#" class="pull-left"><img src="/favicon.png" width=40px heigth=40px></a>
+      <a class="navbar-brand" href="#">  </a>
       <a class="navbar-brand" href="#">Indoor Signal Measurement</a>
     </div>
     <ul class="nav navbar-nav">
+
       <li ><a href="/home">Home</a></li>
       <li><a href="/remoteapp">Remote App</a></li>
       <li><a href="/map">Map</a></li>
